@startuml
title DAI — Class Diagram (Domain Model)

class Patient {
  +id: UUID
  +firstName: String
  +lastName: String
  +dateOfBirth: Date
  +sex: String
}

class AnesthesiaCase {
  +id: UUID
  +status: CaseStatus
  +surgeryType: String
  +scheduledAt: DateTime
  +notes: String
  +createdAt: DateTime
  +updatedAt: DateTime
}

enum CaseStatus {
  PRE_OP
  PER_OP
  POST_OP
  CLOSED
}

class PreOpQuestionnaire {
  +id: UUID
  +language: QuestionLanguage
  +validationStatus: PreOpValidationStatus
  +submittedAt: DateTime
  +validatedAt: DateTime
  +createdAt: DateTime
  +updatedAt: DateTime
}

enum PreOpValidationStatus {
  DRAFT
  SUBMITTED
  VALIDATED
  CORRECTED
}

class QuestionTemplate {
  +id: UUID
  +section: String
  +questionCode: String
  +labelFr: String
  +labelAr: String
  +answerType: AnswerType
  +isRequired: Boolean
  +usedForScores: Boolean
  +isActive: Boolean
}

class PreOpQuestionnaireResponse {
  +id: UUID
  +questionCode: String
  +answerValue: String
  +questionLabelFr: String
  +questionLabelAr: String
  +answerType: AnswerType
}

enum AnswerType {
  BOOLEAN
  TEXT
  NUMBER
  CHOICE
  MULTI_CHOICE
  DATE
}

class ClinicalScore {
  +id: UUID
  +scoreType: ScoreType
  +scoreValue: String
  +scoreDetails: JSON
  +computedAt: DateTime
}

enum ScoreType {
  DUKE
  LEE
  STOP_BANG
  APFEL
  GOLD
  CHILD_PUGH
  NYHA
  CHA2DS2_VASC
  ARISCAT
  ALDRETE
}

class PerOpSession {
  +id: UUID
  +status: PerOpSessionStatus
  +startedAt: DateTime
  +endedAt: DateTime
  +notes: String
}

enum PerOpSessionStatus {
  ACTIVE
  ENDED
}

class VitalSignMeasurement {
  +id: UUID
  +vitalType: VitalType
  +value: Decimal
  +unit: String
  +recordedAt: DateTime
  +sourceDevice: String
}

enum VitalType {
  HEART_RATE
  SYSTOLIC_BP
  DIASTOLIC_BP
  MAP
  SPO2
  ETCO2
  RESPIRATORY_RATE
  TEMPERATURE
}

class PerOpEvent {
  +id: UUID
  +eventType: PerOpEventType
  +title: String
  +description: String
  +timestamp: DateTime
}

enum PerOpEventType {
  MEDICATION
  PROCEDURE
  INCIDENT
  TECHNICAL
}

class MedicationAdministration {
  +id: UUID
  +drugName: String
  +dose: String
  +route: String
  +administeredAt: DateTime
}

class PostOpStay {
  +id: UUID
  +status: PostOpStayStatus
  +startedAt: DateTime
  +endedAt: DateTime
  +notes: String
}

enum PostOpStayStatus {
  ACTIVE
  ENDED
}

class PostOpObservation {
  +id: UUID
  +observationTime: DateTime
  +painScore: Integer
  +activityScore: Integer
  +respirationScore: Integer
  +circulationScore: Integer
  +consciousnessScore: Integer
  +oxygenationScore: Integer
  +systolicBp: Integer
  +spo2: Integer
  +notes: String
  +aldreteScore(): Integer
}

class AuditLog {
  +id: UUID
  +timestamp: DateTime
  +action: String
  +entityType: String
  +entityId: String
  +actor: String
}

Patient "1" -- "0..*" AnesthesiaCase : has >
AnesthesiaCase "1" -- "0..1" PreOpQuestionnaire : pre-op >
PreOpQuestionnaire "1" -- "0..*" PreOpQuestionnaireResponse : contains >
QuestionTemplate "1" .. "0..*" PreOpQuestionnaireResponse : template >
AnesthesiaCase "1" -- "0..*" ClinicalScore : produces >

AnesthesiaCase "1" -- "0..1" PerOpSession : per-op >
PerOpSession "1" -- "0..*" VitalSignMeasurement : records >
PerOpSession "1" -- "0..*" PerOpEvent : logs >
PerOpEvent "0..1" -- "0..1" MedicationAdministration : details >

AnesthesiaCase "1" -- "0..1" PostOpStay : post-op >
PostOpStay "1" -- "0..*" PostOpObservation : contains >

AnesthesiaCase "1" -- "0..*" AuditLog : audited by >
@enduml